# Scriptum-Report

./: .gitignore  AGENTS.md  CHANGELOG  LICENSE.md  README.md  pyproject.toml
LICENSES/: Commercial.md  PolyForm-Noncommercial-1.0.0.md
Scriptum/: __init__.py
Scriptum/_docx/: README.md  __init__.py  base.py  reportDocx.py  structure.py  template.py  units.py
Scriptum/_docx/images/: __init__.py  element.py
Scriptum/_docx/paragraphs/: __init__.py  element.py
Scriptum/_docx/section/: __init__.py  section.py  sections.py
Scriptum/_docx/tables/: __init__.py  element.py
Scriptum/_pptx/: README.md  __init__.py  attrs.py  base.py  reportPptx.py  shapes.py  slide.py  template_utils.py  templates.py  units.py
Scriptum/_pptx/images/: __init__.py  element.py  template.py
Scriptum/_pptx/paragraphs/: __init__.py  element.py  template.py
Scriptum/element/: __init__.py  base.py  element_image.py  element_paragraph.py  element_table.py
Scriptum/rdf/: README.md  __init__.py  common.py  reportDataFile.py  settings.py
Scriptum/rdf/values/: base.py  (+10 more)
Scriptum/tag/: __init__.py  tag.py
docs/: Intro.md  rdf.md  tags.md  tools.md
scripts/: check_docx.py  check_pptx.py  check_rdf.py  convert_video.py  convert_video.sh
tests/: AGENTS.md  baseTestRoot.py  run_all_tests.ipynb  run_all_tests.py
tests/02_basetest/: common_case.py
tests/04_examples/: _local_test_setup.py  testAllExamples.ipynb
tests/data_source/: SomeParameters.nv  materials.csv  miscdata.csv  result2.csv  table1.csv  table2.csv  table3.csv  wide.csv  world_avi.metadata.json  world_mp4.metadata.json
(+121 files in other folders)
